test/corpus/basics.txt
==========
Single menu command
==========

/ip route print

---

(source_file
  (menu_command
    (menu_prefix)
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))))
