test/corpus/command_substitution.txt
==========
Simple command substitution
==========

:put [find]

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (command_substitution
      (identifier))))

==========
Command substitution with params
==========

:put [/ip route find gateway=1.1.1.1]

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (command_substitution
      (menu_command
        (menu_prefix)
        (menu_argument
          (identifier))
        (menu_argument
          (identifier))
        (menu_argument
          (identifier))
        (menu_argument
          (named_param
            (identifier)
            (assignment)
            (literal
              (ip_address))))))))

==========
Command substitution :len
==========

:put [:len "test"]

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (command_substitution
      (global_command
        (global_command_name
          (identifier))
        (literal
          (string))))))

==========
Command substitution :resolve
==========

:put [:resolve domain-name="mikrotik.com" server=8.8.8.8]

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (command_substitution
      (global_command
        (global_command_name
          (identifier))
        (named_param
          name: (identifier)
          (assignment)
          value: (literal
            (string)))
        (named_param
          name: (identifier)
          (assignment)
          value: (literal
            (ip_address)))))))
