test/corpus/menu_commands.txt
==========
Simple menu command — two levels
==========

/ip route print

---

(source_file
  (menu_command
    (menu_prefix)
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))))

==========
Menu command — one level
==========

/ip

---

(source_file
  (menu_command
    (menu_prefix)
    (menu_argument
      (identifier))))

==========
Menu command — multiple levels
==========

/interface bridge port add

---

(source_file
  (menu_command
    (menu_prefix)
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))))

==========
Menu command — five levels
==========

/ip firewall filter add chain=input action=accept

---

(source_file
  (menu_command
    (menu_prefix)
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (named_param
        (identifier)
        (assignment)
        (identifier)))
    (menu_argument
      (named_param
        (identifier)
        (assignment)
        (identifier)))))
