test/corpus/named_params.txt
==========
Named param in menu command
==========

/ip route add gateway=10.0.0.1 distance=1

---

(source_file
  (menu_command
    (menu_prefix)
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (identifier))
    (menu_argument
      (named_param
        (identifier)
        (assignment)
        (literal
          (ip_address))))
    (menu_argument
      (named_param
        (identifier)
        (assignment)
        (literal
          (number))))))
