test/corpus/subexpressions.txt
==========
Subexpression arithmetic
==========

:put (1 + 2)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (number))
      (operator)
      (literal
        (number)))))

==========
Subexpression comparison
==========

:put ($a = $b)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (variable_reference
        (identifier))
      (assignment)
      (variable_reference
        (identifier)))))

==========
Subexpression complex
==========

:put ($a > 10 and $b < 20)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (variable_reference
        (identifier))
      (operator)
      (literal
        (number))
      (identifier)
      (variable_reference
        (identifier))
      (operator)
      (literal
        (number)))))

==========
Nested subexpression
==========

:put ((1 + 2) * 3)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (subexpression
        (literal
          (number))
        (operator)
        (literal
          (number)))
      (operator)
      (literal
        (number)))))
